--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "primeicons/primeicons.css";
+
+html,
+body {
+  margin: 0;
+  padding: 0 !important;
+  width: 100vw;
+  max-width: 100vw;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  padding-right: 0 !important;
+  min-height: 100vh; /* Ensure it fills the screen */
+}
+
+* {
+  box-sizing: inherit;
+  max-width: 100%; /* Prevent child elements from exceeding width */
+}
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+app-root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0 auto;
+}
